[metadata]
name = mmVelo
version=0.0.1
author = Satoshi Nomura
author_email = url.evlt.hopeace@gmail.com
description = A deep generative model for estimating cell state-dependent dynamics across multiple modalities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nomuhyooon/mmVelo
project_urls =
	     Bug Tracker = https://github.com/nomuhyooon/mmVelo/issues
classifiers =
	    Programming Language :: Python :: 3
	    License :: OSI Approved :: MIT License
	    Operating System :: OS Independent
[options]
package_dir =
	    = src
packages = find:
install_requires =
    _libgcc_mutex==0.1
    _openmp_mutex==4.5
    absl-py==0.15.0
    aiohttp==3.8.1
    aiosignal==1.2.0
    alabaster==0.7.12
    anndata==0.8.0
    appdirs==1.4.4
    argon2-cffi==21.3.0
    argon2-cffi-bindings==21.2.0
    arpack==3.7.0
    asttokens==2.0.5
    async-timeout==4.0.1
    attrs==21.4.0
    babel==2.9.1
    backcall==0.2.0
    beautifulsoup4==4.11.1
    bedtools==2.30.0
    biopython==1.81
    bioservices==1.11.2
    blas==1.0
    bleach==4.1.0
    blinker==1.4
    bottleneck==1.3.4
    brotli==1.0.9
    brotlipy==0.7.0
    bzip2==1.0.8
    c-ares==1.18.1
    ca-certificates==2023.7.22
    cachetools==4.2.2
    cellrank==1.1.0
    certifi==2023.7.22
    cffi==1.15.0
    charset-normalizer==2.1.1
    click==8.0.4
    cmake==3.25.0
    colorama==0.4.4
    colorlog==6.7.0
    contourpy==1.1.1
    cryptography==37.0.1
    cuda-cudart==11.8.89
    cuda-cupti==11.8.87
    cuda-libraries==11.8.0
    cuda-nvrtc==11.8.89
    cuda-nvtx==11.8.86
    cuda-runtime==11.8.0
    cudatoolkit==11.3.1
    cycler==0.11.0
    cython==0.29.32
    dataclasses==0.8
    dbus==1.13.18
    debugpy==1.5.1
    decorator==5.1.1
    defusedxml==0.7.1
    docrep==0.3.2
    docutils==0.17.1
    easydev==0.12.0
    entrypoints==0.4
    executing==0.8.3
    expat==2.4.4
    fcsparser==0.2.4
    ffmpeg==4.2.2
    filelock==3.9.0
    fontconfig==2.13.1
    fonttools==4.25.0
    freetype==2.11.0
    frozenlist==1.2.0
    fsspec==2023.4.0
    functorch==2.0.0
    future==0.18.2
    future_fstrings==1.2.0
    gevent==22.10.2
    giflib==5.2.1
    glib==2.69.1
    glpk==4.65
    gmp==6.2.1
    gnutls==3.6.15
    google-auth==2.6.0
    google-auth-oauthlib==0.4.1
    gprofiler-official==1.0.0
    greenlet==2.0.2
    grequests==0.6.0
    grpcio==1.42.0
    gst-plugins-base==1.14.0
    gstreamer==1.14.0
    h5py==3.6.0
    hdf5==1.10.6
    icu==58.2
    idna==3.3
    igraph==0.9.9
    imagesize==1.3.0
    importlib-metadata==4.11.3
    importlib_metadata==4.11.3
    importlib_resources==6.0.1
    intel-openmp==2021.4.0
    ipykernel==6.9.1
    ipython==8.3.0
    ipython_genutils==0.2.0
    ipywidgets==7.6.5
    jedi==0.18.1
    jinja2==3.0.3
    joblib==1.1.0
    jpeg==9e
    jsonschema==4.4.0
    jupyter==1.0.0
    jupyter_client==7.2.2
    jupyter_console==6.4.3
    jupyter_core==4.10.0
    jupyterlab_pygments==0.1.2
    jupyterlab_widgets==1.0.0
    kiwisolver==1.4.2
    krb5==1.19.4
    lame==3.100
    lcms2==2.12
    ld_impl_linux-64==2.38
    leidenalg==0.8.10
    libblas==3.9.0
    libcublas==11.11.3.6
    libcufft==10.9.0.58
    libcufile==1.7.2.10
    libcurand==10.3.3.141
    libcurl==7.84.0
    libcusolver==11.4.1.48
    libcusparse==11.7.5.86
    libdeflate==1.7
    libedit==3.1.20221030
    libev==4.33
    libffi==3.3
    libgcc-ng==12.1.0
    libgfortran-ng==7.5.0
    libgfortran4==7.5.0
    libgomp==12.1.0
    libidn2==2.3.2
    liblapack==3.9.0
    libllvm11==11.1.0
    libnghttp2==1.46.0
    libnpp==11.8.0.86
    libnvjpeg==11.9.0.86
    libopus==1.3.1
    libpng==1.6.37
    libprotobuf==3.20.1
    libsodium==1.0.18
    libssh2==1.10.0
    libstdcxx-ng==12.1.0
    libtasn1==4.16.0
    libtiff==4.2.0
    libunistring==0.9.10
    libuuid==1.0.3
    libuv==1.40.0
    libvpx==1.7.0
    libwebp==1.2.2
    libwebp-base==1.2.2
    libxcb==1.15
    libxml2==2.9.14
    libxslt==1.1.35
    llvmlite==0.38.0
    loompy==3.0.6
    lxml==4.9.1
    lz4-c==1.9.3
    markdown==3.3.4
    markupsafe==2.1.2
    matplotlib==3.7.2
    matplotlib-base==3.7.2
    matplotlib-inline==0.1.2
    metis==5.1.0
    mistune==0.8.4
    mkl==2021.4.0
    mkl-service==2.4.0
    mkl_fft==1.3.1
    mkl_random==1.2.2
    mpfr==4.0.2
    mpmath==1.2.1
    multidict==5.2.0
    multivelo==0.1.2
    munkres==1.1.4
    natsort==7.1.1
    nbclient==0.5.13
    nbconvert==6.4.4
    nbformat==5.3.0
    ncurses==6.3
    nest-asyncio==1.5.5
    nettle==3.7.3
    networkx==3.0rc1
    ninja==1.10.2
    ninja-base==1.10.2
    notebook==6.4.11
    numba==0.55.1
    numexpr==2.8.1
    numpy==1.24.1
    numpy-base==1.21.5
    numpy_groupies==0.9.19
    oauthlib==3.2.0
    openh264==2.1.1
    openssl==1.1.1w
    opt_einsum==3.3.0
    packaging==21.3
    palantir==1.0.1
    pandas==1.5.2
    pandocfilters==1.5.0
    parso==0.8.3
    patsy==0.5.2
    pcre==8.45
    pexpect==4.8.0
    phenograph==1.5.7
    pickleshare==0.7.5
    pillow==9.3.0
    pip==21.2.4
    progressbar2==4.2.0
    prometheus_client==0.13.1
    prompt-toolkit==3.0.20
    prompt_toolkit==3.0.20
    protobuf==3.20.1
    psutil==5.9.0
    ptyprocess==0.7.0
    pure_eval==0.2.2
    pyasn1==0.4.8
    pyasn1-modules==0.2.8
    pybedtools==0.8.2
    pycparser==2.21
    pydeprecate==0.3.2
    pygam==0.8.0
    pygments==2.11.2
    pyjwt==2.4.0
    pynndescent==0.5.8
    pyopenssl==22.0.0
    pyparsing==3.0.4
    pyqt==5.9.2
    pyro-api==0.1.2
    pyro-ppl==1.8.6
    pyrsistent==0.18.0
    pysam==0.17.0
    pysocks==1.7.1
    python==3.9.12
    python-dateutil==2.8.2
    python-fastjsonschema==2.15.1
    python-igraph==0.9.11
    python-tzdata==2023.3
    python-utils==3.5.2
    python_abi==3.9
    pytorch==2.0.1
    pytorch-cuda==11.8
    pytorch-lightning==1.6.4
    pytorch-mutex==1.0
    pytorch-triton==2.1.0+6e4932cda8
    pytz==2022.1
    pytz-deprecation-shim==0.1.0.post0
    pyyaml==6.0
    pyzmq==22.3.0
    qt==5.9.7
    qtconsole==5.3.0
    qtpy==2.0.1
    readline==8.1.2
    requests==2.27.1
    requests-oauthlib==1.3.0
    requests_cache==0.4.13
    rsa==4.7.2
    scanpy==1.9.5
    scikit-learn==1.0.2
    scipy==1.7.3
    scvelo==0.2.4
    seaborn==0.12.2
    send2trash==1.8.0
    session-info==1.0.0
    setuptools==59.5.0
    sip==4.19.13
    six==1.16.0
    snowballstemmer==2.2.0
    soupsieve==2.3.1
    sphinx==4.4.0
    sphinxcontrib-applehelp==1.0.2
    sphinxcontrib-devhelp==1.0.2
    sphinxcontrib-htmlhelp==2.0.0
    sphinxcontrib-jsmath==1.0.1
    sphinxcontrib-qthelp==1.0.3
    sphinxcontrib-serializinghtml==1.1.5
    sqlite==3.38.3
    stack_data==0.2.0
    statsmodels==0.13.2
    stdlib-list==0.7.0
    suds-community==1.1.2
    suitesparse==5.10.1
    sympy==1.11.1
    tables==3.7.0
    tbb==2021.5.0
    tensorboard==2.6.0
    tensorboard-data-server==0.6.0
    tensorboard-plugin-wit==1.6.0
    terminado==0.13.1
    testpath==0.5.0
    texttable==1.6.4
    threadpoolctl==2.2.0
    tk==8.6.12
    tokenize-rt==5.0.0
    torch==2.2.0.dev20230919+cu118
    torch-tb-profiler==0.4.0
    torchaudio==2.2.0.dev20230919+cu118
    torchmetrics==0.9.1
    torchtriton==2.0.0
    torchvision==0.17.0.dev20230919+cu118
    tornado==6.1
    tqdm==4.64.0
    traitlets==5.1.1
    typing==3.10.0.0
    typing-extensions==4.4.0
    typing_extensions==4.1.1
    tzdata==2022.6
    tzlocal==4.2
    umap-learn==0.5.3
    urllib3==1.26.13
    wcwidth==0.2.5
    webencodings==0.5.1
    werkzeug==2.0.3
    wheel==0.37.1
    widgetsnbextension==3.5.2
    wrapt==1.15.0
    x264==1!157.20191217
    xmltodict==0.13.0
    xz==5.2.5
    yaml==0.2.5
    yarl==1.6.3
    zeromq==4.3.4
    zipp==3.8.0
    zlib==1.2.12
    zope.event==5.0
    zope.interface==6.0
    zstd==1.5.2
[options.packages.find]
where = src